--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,9 @@
 				Click for a new meme!
 			</button>
 			<h1 class="unselectable">Memes</h1>
-			<img class="memeImage shadow" id="memeImage" width="500" />
+			<a id="memeLink">
+				<img class="memeImage shadow" id="memeImage" width="500" />
+			</a>
 			<pre style="font-size: 100px"> </pre>
 		</div>
 	</body>
